--- a/style.css
+++ b/style.css
@@ -111,80 +111,38 @@ nav img{
 
 }
 
-nav .fa{
+
+
+.hamburger{
     display: none;
+    cursor: pointer;
+}
+
+
+
+.bar{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: white;
 }
 
 
 
 
-/*
-@media screen and (max-width: 600px) {
-    
-    .header{
- 
-        width:100%;
-      
-    }
-    
-    .header .text h1{
-        font-size: 160px;
-    }
-
-    .text p{
-        margin: 5px 0 30px ;
-        letter-spacing: 2px;
-        font-size: 65px;
-
-        
-    }
-
-
-    .text span{
-        color: #fff;
-        font-size: 50px;
-    
-    }
-
-
-    nav .nav-links ul li{
-        display: block;
-    }
-    .nav-links {
-        position: absolute;
-        background:rgba(255,255,255,0.05);
-        backdrop-filter:blur(10px);
-        height: 100vh;
-        width:200px;
-        top:0;
-        right:-200px;
-        transition: 1s;
-        z-index: 1000;
-    }
-    nav .fa{
-        float: left;
-        display: block;
-        color:white;
-        margin: 10px;
-        font-size:22px;
-        cursor: pointer;
-    }
-    .nav-links ul {
-        padding: 30px;
-        text-align: center;
-    }
-
-    .about .head .row{
-        display: block;
-    }
-
-
-}
-
-*/
 @media screen and (max-width: 600px) {
     .header{
         width: -webkit-fill-available;
+    }
+    nav img{
+        width:80px;
+        margin-top: 20px;
+
+        
+    
     }
     .header .text h1{
         font-size: 40px;
@@ -195,31 +153,45 @@ nav .fa{
 
         
     }
-    nav .nav-links ul li{
+    .hamburger{
         display: block;
+        z-index: 10000;
     }
-    .nav-links {
-        position: absolute;
+    .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+    }
+    .hamburger.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .nav-menu{
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        right:-100%;
+        top:0;
+        gap:0;
+        height: 100vh;
+        flex-direction: column;
         background:rgba(255,255,255,0.05);
         backdrop-filter:blur(10px);
-        height: 100vh;
-        width:200px;
-        top:0;
-        right:-200px;
-        transition: 1s;
-        z-index: 1000;
-    }
-    nav .fa{
-        float: left;
-        display: block;
-        color:white;
-        margin: 10px;
-        font-size:22px;
-        cursor: pointer;
-    }
-    .nav-links ul {
-        padding: 30px;
+        width: 100%;
         text-align: center;
+        transition: 0.7s;
+        z-index: 1000;
+    
+    }
+    .nav-item{
+        top:50px;
+        margin:20px 0 ;
+        font-weight: 600;
+    }
+    .nav-menu.active{
+        right:0;
     }
 
     
