--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@ nav img{
     top: 50%;
     transform: translate(-50%,-50%);
     text-align: center;
+    transition: 0.5s;
+    
 }
 .text h1{
     font-size: 85px;
@@ -136,6 +138,7 @@ nav img{
 @media screen and (max-width: 600px) {
     .header{
         width: -webkit-fill-available;
+        
     }
     nav img{
         width:80px;
@@ -193,6 +196,86 @@ nav img{
     }
     #nav-menu.active{
         right:0;
+    }
+    
+}
+
+.head #h1a{
+    font-size: 40px;
+}
+
+.head p span{
+    color:red;
+    font-weight: 600;
+}
+.about{
+    height: 100vh;
+    width:80%;
+    margin: auto;
+    text-align: center;
+    margin-top: 100px;
+}
+
+.row{
+    margin: 5%;
+    margin-bottom: 0;
+    display: flex;
+    justify-content: space-between;
+} 
+.about-col{
+    flex-basis: 31%;
+    background-color:#fff ;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    transition: 0.5s;
+    color: red;
+    box-shadow: 0 0 20px 0px rgba(0,0,0,0.5);
+
+}
+.about-col p{
+    font-weight: normal;
+    color:black;
+}
+.about-col:hover{
+    box-shadow: 0 0 20px 0px rgba(0,0,0,0.5);
+    background-color:rgb(230,230,250);
+
+}
+
+
+.about-us .row{
+    justify-content: center;
+    align-items: center;
+    
+}
+
+section .myslides{
+    position: absolute;
+
+    height: 45vh;
+    width: 80vw;
+    object-fit: cover;
+}
+
+@media screen and (max-width: 600px) {
+    .row{
+        margin: 8%;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+    }
+    .about-col{
+        margin-bottom: 15%;
+        padding: 20px 12px;
+       
+    
+    }
+    section .myslides{
+        height: 45vh;
+        width: 80vw;
+        object-fit: cover;
     }
     
 }
