--- a/style.css
+++ b/style.css
@@ -197,6 +197,9 @@ nav img{
     #nav-menu.active{
         right:0;
     }
+    .nav-links ul li:hover::after{
+        width:0;
+    }
     
 }
 
@@ -214,6 +217,7 @@ nav img{
     margin: auto;
     text-align: center;
     margin-top: 100px;
+    overflow: hidden;
 }
 
 .row{
@@ -277,6 +281,14 @@ section .myslides{
         height: 45vh;
         width: 80vw;
         object-fit: cover;
+    }
+    .about{
+        height: 100vh;
+        width:80%;
+        margin: auto;
+        text-align: center;
+        margin-top: 100px;
+        overflow: hidden;
     }
     
 }
@@ -345,7 +357,8 @@ section .myslides{
     
 }
 .service-col:hover{
-    box-shadow: 0 0 20px 0px rgba(0,0,0,0.5);
+    cursor: pointer;
+    box-shadow: 0 0 20px 0px rgba(0,0,0,5);
     background-color:rgb(230,230,250);
 
 }
@@ -355,7 +368,7 @@ section .myslides{
 
 @media screen and (max-width: 600px) {
     .service{
-        margin-top: 250px;
+        margin-top: 350px;
     }
     .service-row{
         margin: 18%;
