--- a/style.css
+++ b/style.css
@@ -432,7 +432,7 @@ section .myslides{
     height: 60vh;
     width: 80%;
     
-
+    z-index: 1000;
     align-items: center;
     
     
@@ -472,6 +472,10 @@ section .myslides{
         height: 50vh;
         width: 70vw;
     }
+    .brands h1{
+        margin-top:60px;
+        }
+   
    
 
 
@@ -480,13 +484,167 @@ section .myslides{
 
 @media screen and (max-width: 375px) {
 
+
     .product .pr-gal{
         margin-top: 200px;
     }
+    .brands h1{
+        margin-top:200px;
+        text-align: center;
+        font-size: 40px;
+        }
+    }
+
+.brands h1{
+
+text-align: center;
+font-size: 40px;
+}
+
+.contact{
+    height: 80vh;
+    width:100%;
+    margin: 25;
+    text-align: center;
+    margin-top: 450px;
+}
+.contact-us{
+    position: relative;
+   
+}
+
+.contact-us h1{
+    font-size: 40px;
+}
+
+.contact-us h1 span{
+    color: red;
+}
+
+@media screen and (max-width: 600px) {
+    .contact{
+        height: 80vh;
+        width:100%;
+        margin: 25;
+        text-align: center;
+        margin-top: 550px;
+    }
+    .location iframe{
+        width: 100%;
+        height:50vh;
+    }
+
+    }
+
+    @media screen and (max-width: 375px) {
+        .contact{
+            height: 80vh;
+            width:100%;
+            margin: 25;
+            text-align: center;
+            margin-top: 600px;
+        }
+        .location iframe{
+            width: 100%;
+            height:50vh;
+        }
+    
+        }
+
+.location{
+    width: 80%;
+    margin: auto;
+    padding: 80px 0;
 
 }
 
-.brands h1{
-    text-align: center;
-    font-size: 40px;
+.location iframe{
+    width: 100%;
+}
+
+.contact-me{
+    width: 80%;
+    margin: auto;
+
+}
+
+.contact-col{
+    flex-basis: 48%;
+    margin-bottom: 30px;
+    margin-top: 60px;
+}
+
+.contact-col div{
+    display: flex;
+    align-items:center ;
+    margin-bottom:40px;
+}
+
+.contact-col div .fa{
+    font-size: 28px;
+    color: #f44336;
+    margin: 10px;
+    margin-right: 30px;
+
+}
+.contact-col div p{
+    padding: 0;
+}
+
+.contact-col h5{
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: #555;
+    font-weight: 400;
+}
+
+
+
+
+
+
+
+@media screen and (max-width: 600px) {
+    .contact-col h5{
+        font-size: 15px;
+        margin-bottom: 5px;
+        color: #555;
+        font-weight: 400;
+    }
+    .contact-col{
+        margin-top: 10px;
+    }
+    
+    
+
+    }
+
+
+.btn{
+        position: relative;
+        text-decoration: none;
+        color:#f44336;
+        border: 2px solid #f44336;
+        padding: 12px 34px;
+        transition: 0.5s;
+        cursor: pointer;
+        background-color: transparent;
+    
+    
+    }
+.btn:hover{
+        color: #fff;
+        background-color: #f44336;
+        border: 2px solid #f44336;
+    
+    }
+    
+
+.contact-col input, .contact-col textarea{
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    border: 1px solid #ccc;
+
 }
