--- a/style.css
+++ b/style.css
@@ -132,15 +132,25 @@ nav img{
     background-color: white;
 }
 
-
+#headerformbl{
+    display: none;
+}
 
 
 @media screen and (max-width: 600px) {
+    nav img{
+        width:90px;
+    
+    }
+    .nav-branding{
+        display: none;
+    }
     .header{
         width: -webkit-fill-available;
         
     }
-    nav img{
+    
+    .header img{
         width:80px;
         margin-top: 20px;
 
@@ -156,49 +166,142 @@ nav img{
 
         
     }
-    #hamburger{
-        display: block;
-        z-index: 10000;
-    }
-    #hamburger.active .bar:nth-child(2){
-        opacity: 0;
-    }
-    #hamburger.active .bar:nth-child(1){
-        transform: translateY(8px) rotate(45deg);
-    }
-
-    #hamburger.active .bar:nth-child(3){
-        transform: translateY(-8px) rotate(-45deg);
-    }
-
-    #nav-menu{
-        display: flex;
-        flex-direction: column;
-        position: fixed;
-        right:-100%;
+    #headerformbl{
         top:0;
-        gap:0;
-        height: 100vh;
-        flex-direction: column;
-        background:rgba(255,255,255,0.05);
-        backdrop-filter:blur(20px);
-        -webkit-backdrop-filter: blur(20px);
+        right:0;
+        display: flex;
+        justify-content: space-between;
         width: 100%;
-        text-align: center;
-        transition: 0.7s;
-        z-index: 1000;
+     
+        box-shadow: 0 5px 25px rgba(0,0,0,0.05);
+    }
+    
+    .logo{
+        position: absolute;
+        height: 60px;
+        line-height: 60px;
+        color:darkblue;
+        font-weight: 700;
+        font-size: 1em;
+        text-decoration: none;
+        cursor: pointer;
+        display: flex;
+        justify-content:center;
+        align-items: center;
+        padding-left: 20px;
+        top:20px;
     
     }
-    .nav-item{
-        top:50px;
-        margin:20px 0 ;
-        font-weight: 600;
+    .logo img{
+        size: 20px;
+        z-index: 1500;
     }
-    #nav-menu.active{
-        right:0;
+    #toggle{
+        border-radius: 50px;
+        position:absolute;
+        top: 20px;
+        right: 0;
+        width: 60px;
+        height: 60px;
+        
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: 0.2s;
+        z-index:1500 ;
+    
     }
-    .nav-links ul li:hover::after{
-        width:0;
+    
+    #toggle::before{
+        content: '';
+        position: absolute;
+        width: 28px;
+        height: 2px;
+        background: #fff;
+        transform: translateY(-5px);
+        transition: 0.2s;
+    
+    }
+    
+    #toggle::after{
+        content: '';
+        position: absolute;
+        width: 28px;
+        height: 2px;
+        background: #fff;
+        transform: translateY(5px);
+        transition: 0.2s;
+    
+    }
+    
+    #toggle.active::before{
+        transform: translateY(0px) rotate(45deg);
+    }
+    
+    
+    #toggle.active::after{
+        transform: translateY(0px) rotate(-45deg);
+    }
+    
+    #toggle.active{
+        background: #f7226a;
+    }
+    
+    #navbar{
+        position: absolute;
+        height: 0;
+        right: 100%;
+        transition: 0.5s;
+        width: 100vw;
+        
+    
+   
+        
+        
+    }
+    #navbar.active{
+      
+       right: 0%;
+    }
+    #navbar ul{
+        background:rgba(255,255,255,0.05);
+        backdrop-filter:blur(35px);
+        -webkit-backdrop-filter: blur(35px);
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        top:40vh;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+        width: 100vw;
+        height: 100vh;
+        top:0;
+       
+        
+        
+    
+    }
+    #navbar ul li{
+        list-style: none;
+    }
+    #navbar ul li a{
+
+        color:white;
+        text-decoration: none;
+        height: 60px;
+        line-height: 110px;
+        
+        font-size: 1.2em;
+        padding: 0 15px;
+        letter-spacing: 2px;
+        justify-content: center;
+        align-items: center;
+    }
+    #navbar ul li a:hover{
+       
+        color: #fff;
     }
     
 }
@@ -256,12 +359,15 @@ nav img{
 }
 
 section .myslides{
+
     position: absolute;
     border-radius:5px;
     height: 45vh;
     width: 80vw;
     object-fit: cover;
+    
 }
+
 
 @media screen and (max-width: 600px) {
     .row{
@@ -494,6 +600,7 @@ section .myslides{
         font-size: 40px;
         }
     }
+    
 
 .brands h1{
 
@@ -549,6 +656,35 @@ font-size: 40px;
             height:50vh;
         }
     
+        }
+
+        @media screen and (max-width: 390px) {
+            .text p{
+                letter-spacing: 1px;
+                font-size: 20px;
+            
+                
+            }
+
+
+        }
+        @media screen and (max-width: 393px) {
+            .text p{
+                letter-spacing: 1px;
+                font-size: 20px;
+            
+                
+            }
+
+
+        }
+        @media screen and (max-width: 360px) {
+            #text {
+                font-size:35px;
+            
+                
+            }
+
         }
 
 .location{
