--- a/style.css
+++ b/style.css
@@ -262,12 +262,11 @@ nav img{
     }
     #navbar.active{
       
-       right: 0%;
+       right: 5%;
     }
     #navbar ul{
-        background:rgba(255,255,255,0.05);
-        backdrop-filter:blur(35px);
-        -webkit-backdrop-filter: blur(35px);
+        background:rgba(0, 0, 0, 0.95);
+        
         position: absolute;
         display: flex;
         flex-direction: column;
@@ -275,7 +274,7 @@ nav img{
         justify-content: center;
         align-items: center;
         z-index: 1000;
-        width: 100vw;
+        width: 70vw;
         height: 100vh;
         top:0;
        
@@ -783,4 +782,14 @@ font-size: 40px;
     outline: none;
     border: 1px solid #ccc;
 
+}
+.contact-col .btn{
+    margin: 5px;
+}
+
+.header .whatsapp img{
+    right:5%;
+    position: absolute;
+    top:88%;
+    width: 52px;
 }
