--- a/style.css
+++ b/style.css
@@ -78,10 +78,24 @@ nav img{
     margin:0;
     padding: 0;
     text-align:center;
-
-    
+    font-family: "Sofia", sans-serif;
+    background-image: linear-gradient(to left, rgb(255, 255, 255), rgb(209, 190,13), rgb(209, 190,13), rgb(209, 190, 13), rgb(155, 145, 14),rgb(255, 255, 255), rgb(230, 230, 230), rgb(240, 240, 240));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: slide 10s  forwards;
 
 }
+@keyframes slide{
+    0%{
+        background-position-x:0% ;
+    }
+    100%{
+        background-position-x:100vw ;
+    }
+}
+
+
+
 .text p{
     margin: 5px 0 30px ;
     letter-spacing: 2px;
@@ -100,13 +114,20 @@ nav img{
     text-decoration: none;
     color:#fff;
     border: 2px solid #fff;
-    padding: 12px 34px;
+    padding: 10px 30px;
     transition: 0.5s;
     cursor: pointer;
     background-color: transparent;
+    font-family: "Sofia", sans-serif;
+    letter-spacing: 4px;
+    font-weight: 400;
+
 
 
 }
+
+
+
 .text .btn:hover{
     background-color: #f44336;
     border: 2px solid #f44336;
@@ -313,6 +334,7 @@ nav img{
     color:red;
     font-weight: 600;
 }
+
 .about{
     height: 100vh;
     width:80%;
@@ -399,6 +421,135 @@ section .myslides{
 }
 
 
+.photoid{
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+
+}
+
+.photoid .container{
+
+    position: relative;
+    width: 1200px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.photoid .container .box{
+    
+    position: relative;
+    width: 245px;
+    height: 245px;
+    overflow: hidden;
+    transition: 0.5s;
+    margin: 5px;
+    box-shadow: 0 0 20px 0px rgba(0,0,0,0.5);
+    
+}
+
+.photoid .container .box:hover{
+    z-index: 1;
+    transform: scale(1.25);
+    box-shadow: 0 25px 40px rgba(0,0,0,0.5);
+}
+
+.photoid .container .box .imgBx{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height: 100%;
+}
+
+
+.photoid .container .box .imgBx:before{
+    content: '';
+    position:absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: linear-gradient(180deg,rgb(224, 111, 111),#000);
+    mix-blend-mode: multiply;
+    opacity: 0;
+    transition: 0.5s;
+
+}
+
+.photoid .container .box:hover .imgBx:before{
+    opacity: 1;
+}
+
+
+
+.photoid .container .box .imgBx img{
+    position: absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+
+.photoid .container .box .content{
+    background: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: flex;
+    padding-left: 20px;
+    align-items: flex-end;
+
+}
+
+.photoid .container .box .content h2 {
+    color: #fff;
+    transition: 0.5s;
+    text-transform: uppercase;
+    margin-bottom: 0;
+    font-size: 20px;
+    transform: translateY(200px);
+    
+
+}
+
+.photoid .container .box:hover .content h2 {
+    transform: translateY(0);
+    transition-delay: 0.4s;
+}
+
+
+.photoid .container .box .content p {
+    color: #fff;
+    transform: translateY(200px);
+    transition: 0.5s;
+    font-size: 14px;
+}
+
+.photoid .container .box:hover .content p {
+    transform: translateY(0);
+    transition-delay: 0.6s;
+}
+
+
+
+
+
+
+
+
 
 
 .service-head #h1s{
@@ -475,6 +626,9 @@ section .myslides{
 }
 
 @media screen and (max-width: 600px) {
+    .photoid{
+        display: none;
+    }
     .service{
         margin-top: 350px;
     }
