--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ nav img{
     
     }
     .header .text h1{
-        font-size: 40px;
+        font-size: 50px;
     }
     .text p{
         letter-spacing:4px;
@@ -327,7 +327,8 @@ nav img{
 }
 
 .head #h1a{
-    font-size: 40px;
+    font-size: 60px;
+    font-family: "Sofia", sans-serif;
 }
 
 .head p span{
@@ -342,6 +343,9 @@ nav img{
     text-align: center;
     margin-top: 100px;
     overflow: hidden;
+    margin-top: 10vh;
+    margin-bottom: 10vh;
+    
 }
 
 .row{
@@ -362,6 +366,9 @@ nav img{
     box-shadow: 0 0 20px 0px rgba(0,0,0,0.5);
 
 }
+
+
+
 .about-col p{
     font-weight: normal;
     color:black;
@@ -553,7 +560,9 @@ section .myslides{
 
 
 .service-head #h1s{
-    font-size: 40px;
+    font-size: 65px;
+    font-family: "Sofia", sans-serif;
+    letter-spacing: 5px;
 }
 
 .service-head p span{
@@ -624,6 +633,7 @@ section .myslides{
 .service-row .service-col h1{
     font-size: 35px;
 }
+
 
 @media screen and (max-width: 600px) {
     .photoid{
@@ -753,12 +763,15 @@ section .myslides{
         font-size: 40px;
         }
     }
-    
 
+.brands{
+    margin-top: 20px;
+} 
 .brands h1{
 
-text-align: center;
-font-size: 40px;
+    text-align: center;
+    font-family: "Sofia", sans-serif;
+    font-size: 50px;
 }
 
 .contact{
@@ -946,4 +959,24 @@ font-size: 40px;
     position: absolute;
     top:88%;
     width: 52px;
+}
+
+.bkhome img{
+    width:50px;
+    float: right;
+    padding: 20px;
+    margin-bottom: 0;
+    animation: backimg 5s infinite ;
+    transform: translateY(0);
+
+    
+}
+
+@keyframes backimg{
+    0%{
+        transform: translateY(0px);
+    }
+    100%{
+        transform: translateY(10px);
+    }
 }
