--- a/style.css
+++ b/style.css
@@ -429,6 +429,7 @@ section .myslides{
 
 
 .photoid{
+    z-index: 1000;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
@@ -553,6 +554,93 @@ section .myslides{
 
 
 
+.swiper{
+    display: none;
+}
+
+
+
+@media screen and (max-width: 600px) {
+    
+   
+    .swiper {
+       
+        display: block;
+        margin-top: 300px;
+        width: 80%;
+        margin-bottom: 0;
+        
+      }
+
+      .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+       
+
+        /* Center slide text vertically */
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+      }
+
+      .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit:contain;
+        
+      }
+
+
+
+
+
+
+      
+
+
+
+
+
+}
+
+@media screen and (max-width: 375px) {
+    .swiper {
+       
+        display: block;
+        margin-top: 450px;
+        width: 80%
+      }    
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -577,7 +665,7 @@ section .myslides{
     width:80%;
     margin: auto;
     text-align: center;
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 .service-row{
