--- a/style.css
+++ b/style.css
@@ -637,11 +637,28 @@ section .myslides{
 
 
 
+.mbgl{
+   display: none;
+}
 
 
 
+@media screen and (max-width: 600px) {
+    .mbgl{
+        display: block;
+        height: 50vh;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        margin-top: 0px;
+
+    }
+   
+   
 
 
+
+}
 
 
 
@@ -665,7 +682,7 @@ section .myslides{
     width:80%;
     margin: auto;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 .service-row{
@@ -843,12 +860,19 @@ section .myslides{
 
 
     .product .pr-gal{
-        margin-top: 200px;
+        margin-top: 100px;
+    }
+    .product .pr-gal .pr-slides{
+        height: 70vh;
+        width: 80vw;
     }
     .brands h1{
         margin-top:200px;
         text-align: center;
         font-size: 40px;
+        }
+    .service{
+            margin-top: 450px;
         }
     }
 
