--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -1115,4 +1116,54 @@ section .myslides{
     100%{
         transform: translateY(10px);
     }
+}
+
+.caption{
+    font-size: 15px;
+    width: 100%;
+    align-items: center;
+    text-align: center;
+    
+}
+.caption h3{
+    font-size: 15px;
+    justify-content: center;
+    align-items: center;
+    margin-top:25px;
+    opacity: .7;
+}
+.caption span{
+  
+    font-family: 'Sacramento', cursive;
+    font-size: 25px;
+    font-weight: 900;
+}
+
+
+
+@media screen and (max-width: 600px) {
+    .caption{
+        font-size: 15px;
+        width: 100%;
+        align-items: left;
+        text-align: left;
+        
+    }
+    .caption h3{
+        font-size: 10px;
+        justify-content: center;
+        align-items: center;
+        margin-top:70px;
+        padding-left:20px;
+        opacity: .7;
+    }
+    .caption span{
+      
+        font-family: 'Sacramento', cursive;
+        font-size: 15px;
+        font-weight: 900;
+         padding-left:40px;
+    }
+    
+
 }
