--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ nav img{
     background-image: linear-gradient(to left, rgb(255, 255, 255), rgb(255, 230, 0), rgb(255, 230, 0), rgb(255, 230, 0), rgb(255, 238, 0),rgb(255, 255, 255), rgb(230, 230, 230), rgb(240, 240, 240));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    animation: slide 10s  forwards;
+    animation: slide 10s i forwards;
 
 }
 @keyframes slide{
@@ -120,7 +120,7 @@ nav img{
     cursor: pointer;
     background-color: transparent;
     font-family: "Sofia", sans-serif;
-    letter-spacing: 4px;
+    letter-spacing: 1.5px;
     font-weight: 400;
 
 
@@ -897,6 +897,13 @@ section .myslides{
     text-align: center;
     margin-top: 450px;
 }
+
+.contact video{
+    border-radius:10px;
+    height: 45vh;
+    width: 82vw;
+    object-fit: cover;
+}
 .contact-us{
     position: relative;
    
@@ -922,6 +929,13 @@ section .myslides{
         width: 100%;
         height:50vh;
     }
+    .contact video{
+        
+        
+        width: 95%;
+    
+    }
+}
 
     }
 
@@ -982,8 +996,9 @@ section .myslides{
 
 .contact-me{
     width: 80%;
-    margin: auto;
-
+    margin:auto;
+    margin-top:300px;
+    
 }
 
 .contact-col{
@@ -1044,6 +1059,10 @@ section .myslides{
 
 
 @media screen and (max-width: 600px) {
+    .contact-me{
+        margin-top:180px;
+    
+    }
     .contact-col h5{
         font-size: 15px;
         margin-bottom: 5px;
@@ -1058,6 +1077,12 @@ section .myslides{
 
     }
 
+@media screen and (max-width: 600px) {
+        .contact-me{
+            margin-top:240px;
+        }
+}
+    
 
 .btn{
         position: relative;
@@ -1184,8 +1209,10 @@ section .myslides{
 
 
 @media screen and (max-width: 600px) {
-    .footerimg{
-        display: none;
+    .footerimg img{
+        display: flex;
+        object-fit:cover;
+        
     }
 
     
